Implement ace editor (WIP)

--- a/src/components/codemode/CodeMode.scss
+++ b/src/components/codemode/CodeMode.scss
@@ -7,17 +7,22 @@
   display: flex;
   flex-direction: column;
 
-  textarea {
-    flex: 1;
+  .contents {
     width: 100%;
-    box-sizing: border-box;
-    margin: 0;
-
-    resize: none;
-    border: none;
-    outline: none;
-
-    font-family: $font-family-mono;
-    font-size: $font-size-mono;
+    height: 100%;
   }
+
+  //textarea {
+  //  flex: 1;
+  //  width: 100%;
+  //  box-sizing: border-box;
+  //  margin: 0;
+  //
+  //  resize: none;
+  //  border: none;
+  //  outline: none;
+  //
+  //  font-family: $font-family-mono;
+  //  font-size: $font-size-mono;
+  //}
 }
