--- a/src/components/codemode/CodeMenu.scss
+++ b/src/components/codemode/CodeMenu.scss
@@ -1,2 +1,22 @@
 // FIXME: create shared file for menu styling
 @import '../editor/menu.scss';
+
+.menu {
+  .empty-space {
+    flex: 1;
+  }
+
+  .powered-by {
+    font-size: 8pt;
+    padding: 0 10px 3px;
+
+    a {
+      color: $white;
+      opacity: 0.7;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
