--- a/src/components/modes/treemode/ValidationError.scss
+++ b/src/components/modes/treemode/ValidationError.scss
@@ -1,4 +1,4 @@
-@import '../../styles';
+@import '../../../styles';
 
 // TODO: create a class shared by .expand and .validation-error buttons
 .validation-error {
