--- a/src/components/controls/Menu.scss
+++ b/src/components/controls/Menu.scss
@@ -4,6 +4,7 @@
   font-family: $font-family;
   font-size: $font-size;
   background: $theme-color;
+  border-bottom: 1px solid $theme-color;
   color: $white;
   display: flex;
   flex-wrap: wrap;
