Styling fix for the boolean toggle

--- a/src/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/components/modes/treemode/json-node-selected-mixin.scss
@@ -27,6 +27,10 @@
     .tag {
       background: $selection-background-meta;
     }
+
+    :global(.boolean-toggle) {
+      color: $selection-color;
+    }
   }
 
   // key selected
