Implement warning before loading a large document in code mode

--- a/src/components/controls/Message.scss
+++ b/src/components/controls/Message.scss
@@ -25,6 +25,11 @@
     color: $white;
   }
 
+  &.warning {
+    background: $warning-color;
+    color: $white;
+  }
+
   .actions {
     display: flex;
     gap: $padding;
