Change order of fonts such that sans mono comes before courier new (the latter is a lighter font)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 
 $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font-family-mono: consolas, monaco, "lucida console", "courier new",  "dejavu sans mono", "droid sans mono", courier, monospace, sans-serif;
+$font-family-mono: consolas, monaco, "lucida console", "dejavu sans mono", "droid sans mono", monospace, "courier new",  courier;
 $font-size-mono: 14px;
 $font-size: 16px;
 $font-size-small: 11px;
