--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,9 @@ $error-border-color: #ffd700;
 $dark-gray: #656565;
 $gray: rgb(157, 157, 157); // #9d9d9d
 $gray-transparent: rgba(0, 0, 0, 0.38); // #9d9d9d but with transparency
+$middle-gray: #d3d3d3; // #d3d3d3
 $light-gray: rgb(192, 192, 192); // #c0c0c0
+$very-light-gray: rgb(226, 226, 226);
 $light-gray-transparent: rgba(0, 0, 0, 0.25); // #c0c0c0
 
 $value-color-string: #008000;
@@ -35,14 +37,14 @@ $value-color-null: #004ED0;
 $value-color-url: $value-color-string;
 
 $contents-background: $white;
-$selection-background: $theme-color;
+$selection-background: $middle-gray;
 $selection-color: $white;
 $hovered-background: rgb(240, 240, 240); // #f0f0f0
 $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
 $background-gray: #f5f5f5;
 $border-gray: #d8dbdf;
 $meta-color: $gray-transparent;
-$edit-border-color: darken($theme-color, 30%);
+$edit-border-color: $dark-gray;
 
 $line-height: 18px;
 $indentation-width: 18px; // IMPORTANT: keep in sync with js constant INDENTATION_WIDTH
