--- a/src/components/modes/treemode/TreeMode.scss
+++ b/src/components/modes/treemode/TreeMode.scss
@@ -1,12 +1,13 @@
 @import '../../../styles';
 
-.jsoneditor {
+.tree-mode {
   width: 100%;
   height: 100%;
   min-height: 150px;
   display: flex;
   flex-direction: column;
   position: relative;
+  background: $white;
 
   &:not(.visible) {
     visibility: hidden;
