--- a/src/components/JSONEditor.scss
+++ b/src/components/JSONEditor.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid $theme-color;
+  position: relative;
 
   &.focus {
     box-shadow: $outline-shadow;
