--- a/src/components/JSONEditor.scss
+++ b/src/components/JSONEditor.scss
@@ -4,8 +4,11 @@
 .jsoneditor-main {
   width: 100%;
   height: 100%;
+  min-height: 150px;
   border: 1px solid $theme-color;
   position: relative;
+  display: flex;
+  flex-direction: row;
 
   &.focus {
     box-shadow: $outline-shadow;
