--- a/src/components/modes/codemode/CodeMode.scss
+++ b/src/components/modes/codemode/CodeMode.scss
@@ -1,16 +1,14 @@
 @import '../../../styles';
 
 .code-mode {
-  width: 100%;
-  height: 100%;
+  flex: 1;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   background: $white;
 
   .contents {
-    width: 100%;
-    height: 100%;
+    flex: 1;
 
     &:not(.visible) {
       visibility: hidden;
