--- a/src/components/modes/repairmode/RepairMode.scss
+++ b/src/components/modes/repairmode/RepairMode.scss
@@ -1,8 +1,7 @@
 @import '../../../styles.scss';
 
 .json-repair {
-  width: 100%;
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
 
