--- a/src/components/modes/treemode/TreeMode.scss
+++ b/src/components/modes/treemode/TreeMode.scss
@@ -1,9 +1,7 @@
 @import '../../../styles';
 
 .tree-mode {
-  width: 100%;
-  height: 100%;
-  min-height: 150px;
+  flex: 1;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -12,7 +10,8 @@
   &:not(.visible) {
     visibility: hidden;
     height: 0;
-    min-height: 0;
+    width: 0;
+    flex: unset;
   }
 
   .hidden-input-label {
