--- a/src/components/modes/welcomemode/WelcomeMode.scss
+++ b/src/components/modes/welcomemode/WelcomeMode.scss
@@ -1,14 +1,15 @@
 @import '../../../styles';
 
 .welcome-mode {
-  width: 100%;
-  height: 100%;
+  flex: 1;
+  align-content: stretch;
+
   display: flex;
   flex-direction: column;
   position: relative;
   background: $white;
 
-  // TODO: create a componet for hidden input label instead of this duplicate
+  // TODO: create a component for hidden input label instead of this duplicate
   .hidden-input-label {
     position: absolute;
     right: 0;
@@ -27,7 +28,7 @@
 
   .welcome {
     flex: 1;
-    overflow: auto;
+    overflow: auto; // FIXME: overflow doesn't work (try giving editor 100px height)
     font-family: $font-family;
     font-size: $font-size;
 
@@ -46,7 +47,6 @@
     .contents {
       margin: 2em $padding 0;
       color: $gray;
-      overflow: hidden;
 
       ul {
         $list-padding: 10px;
