Support arrow keys in the ContextMenu for navigation over the buttons

--- a/src/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -10,6 +10,11 @@
 
   $gray-highlight: lighten($dark-gray, 5%);
 
+  button:focus {
+    background: $gray-highlight;
+    //outline: 1px solid red;
+  }
+
   .row {
     display: flex;
     flex-direction: row;
