--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,7 @@ $bottom-height: 5px;
 $contents-padding: 2px;
 
 $context-menu-button-size: 18px;
+$errors-overview-max-height: 25%;
 
 $box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
 $outline-shadow: 0 0 10px 0 rgba(56, 131, 250, 0.8);
