--- a/src/components/controls/Message.scss
+++ b/src/components/controls/Message.scss
@@ -38,7 +38,7 @@
       background: rgba(255, 255, 255, 0.2);
       color: $white;
 
-      padding: $padding/2 $padding;
+      padding: $padding-half $padding;
 
       &:hover {
         background: rgba(255, 255, 255, 0.3);
