--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,7 @@ $search-box-offset: 10px;
 $border-radius: 3px;
 
 $padding: 10px;
+$padding-half: 0.5 * $padding;
 $menu-padding: 5px;
 $bottom-height: 5px;
 $contents-padding: 2px;
