--- a/src/components/controls/Menu.scss
+++ b/src/components/controls/Menu.scss
@@ -19,7 +19,7 @@
     background: transparent;
     color: white;
     cursor: pointer;
-    padding: $padding / 2;
+    padding: $padding-half;
     margin: 0;
     border-radius: 0;
 
@@ -37,7 +37,7 @@
       width: $menu-button-size - 2 * $pressed-button-margin;
       height: $menu-button-size - 2 * $pressed-button-margin;
       margin: $pressed-button-margin;
-      $p: $padding/2 - $pressed-button-margin;
+      $p: $padding-half - $pressed-button-margin;
       padding: ($p + 1px) ($p - 1px) ($p - 1px) ($p + 1px);
 
       box-shadow: inset 1px 1px 2px #1d4075;
