--- a/src/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -10,9 +10,12 @@
 
   $gray-highlight: lighten($dark-gray, 5%);
 
-  button:focus {
-    background: $gray-highlight;
-    //outline: 1px solid red;
+  button {
+    @include jsoneditor-button;
+
+    &:focus {
+      background: $gray-highlight;
+    }
   }
 
   .row {
