--- a/src/components/controls/ValidationErrorsOverview.scss
+++ b/src/components/controls/ValidationErrorsOverview.scss
@@ -34,6 +34,8 @@
           padding: 0;
 
           button.validation-errors-collapse {
+            @include jsoneditor-button;
+
             width: 36px;
             height: 26px;
             cursor: pointer;
