fix: give the user a hint when pasted JSON contents as text

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ $highlight-color: #ffe665;
 $highlight-hover-color: #f0f000;
 $highlight-active-color: #ffd700;
 $highlight-active-hover-color: #f3cd00;
-$warning-color: #FBB917;
+$warning-color: #fdc539;
 $error-background-color: #ffef8b;
 $error-border-color: #ffd700;
 $dark-gray: #656565;
