--- a/src/components/controls/Message.scss
+++ b/src/components/controls/Message.scss
@@ -30,6 +30,11 @@
     color: $white;
   }
 
+  &.info {
+    background: $gray;
+    color: $white;
+  }
+
   .actions {
     display: flex;
     gap: $padding;
