refactor: move repair component into the modal folder

--- a/src/lib/components/modals/repair/JSONRepairComponent.scss
+++ b/src/lib/components/modals/repair/JSONRepairComponent.scss
@@ -1,6 +1,6 @@
-@import '../../../styles.scss';
+@import '../../../styles';
 
-.json-repair {
+.json-repair-component {
   flex: 1;
   display: flex;
   flex-direction: column;
