feat: show a time icon with human-readable time in case of unix timestamps

--- a/src/lib/components/controls/tooltip/Tooltip.scss
+++ b/src/lib/components/controls/tooltip/Tooltip.scss
@@ -1,6 +1,6 @@
 @import '../../../styles';
 
-.jse-validation-error-popup {
+.jse-tooltip {
   padding: $padding-half $padding;
   border-radius: $border-radius;
   background: $dark-gray;
