--- a/src/app.css
+++ b/src/app.css
@@ -13,4 +13,31 @@ body {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
     'Helvetica Neue', sans-serif;
+  line-height: 1.5em;
+}
+
+h1 {
+  color: #ff3e00;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 100;
+}
+
+h2 {
+  color: #4d4d4d;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 400;
+}
+
+a {
+  color: #156fc5;
+}
+
+a:hover {
+  color: #0f508d;
+}
+
+p {
+  max-width: 700px;
 }
