--- a/src/lib/components/controls/tooltip/Tooltip.scss
+++ b/src/lib/components/controls/tooltip/Tooltip.scss
@@ -1,6 +1,8 @@
 @import '../../../styles';
 
 .jse-tooltip {
+  font-family: $font-family;
+  font-size: $font-size;
   padding: $padding-half $padding;
   border-radius: $border-radius;
   background: $dark-gray;
