--- a/src/lib/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/lib/components/modes/treemode/json-node-selected-mixin.scss
@@ -18,8 +18,8 @@
 
   // key selected
   &.selected-key {
-    > .contents-outer > .contents > :global(.identifier > .key),
-    > .header-outer > .header > :global(.identifier > .key) {
+    > .contents-outer > .contents > :global(.identifier) > :global(.key),
+    > .header-outer > .header > :global(.identifier) > :global(.key) {
       background-color: $selection-background;
     }
   }
