--- a/src/lib/components/modes/treemode/shared.scss
+++ b/src/lib/components/modes/treemode/shared.scss
@@ -1,33 +1,34 @@
 @import '../../../styles';
 
-// for key and value
-div.editable-div {
-  line-height: $line-height;
-  min-width: 16px;
-  word-break: normal;
-  padding: 0 $input-padding;
-  box-sizing: border-box;
-  outline: none;
-  border-radius: 1px;
-  vertical-align: top;
-
-  &[contenteditable='true'] {
-    outline: 2px solid $edit-border-color;
-    background: $white !important;
-    position: relative;
-    border-radius: 0;
-    z-index: 3; // must be on top of hovering the entry below it
+.value {
+  &.string {
+    color: $value-color-string;
   }
 
-  &.empty {
-    &:not(:focus) {
-      outline: 1px dotted $light-gray-transparent;
-      -moz-outline-radius: 2px;
-    }
+  &.object,
+  &.array {
+    min-width: 16px;
+    color: $meta-color;
+  }
 
-    &::after {
-      pointer-events: none;
-      color: $light-gray-transparent;
-    }
+  &.number {
+    color: $value-color-number;
+  }
+
+  &.boolean {
+    color: $value-color-boolean;
+  }
+
+  &.null {
+    color: $value-color-null;
+  }
+
+  &.invalid {
+    color: $black;
+  }
+
+  &.url {
+    color: $value-color-url;
+    text-decoration: underline;
   }
 }
