--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -37,6 +37,7 @@
     height: 0;
     top: $padding;
     margin-right: $padding + 20px;
+    margin-left: $padding;
     text-align: right;
     z-index: 3; // must be above the ContextMenuButton
   }
